--- a/style.css
+++ b/style.css
@@ -1,82 +1,183 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+}
+.navbar {
+  background-color: pink;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  
+}
+.navbar ul {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+  justify-content: center;
+  align-items: center;
+}
+.navbar li a {
+  cursor: pointer;
+  text-decoration: none;
+  color: black;
+  font-weight: bolder;
+  font-size: 1.5rem;
+}
+.navbar ul img{
+  width: 3rem;
+  display: none;
+}
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container {
+  margin: 2rem 0 2rem 0;
+  width: 70vw;
+  height: 75vh;
+  display: flex;
+}
+#section1 {
+  width: 40%;
+  height: 75vh;
+  background-color: #d377d5;
+}
 
+#section1 img {
+  width: 30vw;
+  height: 35vh;
+  margin: 3rem 1rem 0 0;
 }
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+#section1 h2 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
+  margin-left: 3rem;
 }
-.navbar ul{
-    display: flex;
-    gap: 1rem;
-    list-style: none;
-    justify-content: center;
-    align-items: center;
+#text {
+  height: 2rem;
+  width: 15rem;
+  margin-left: 3rem;
+  margin-top: 0.7rem;
+  border-radius: 0.5rem;
+  text-align: center;
 }
-.navbar li a{
-    text-decoration: none;
+#btn {
+  width: 8rem;
+  margin-left: 3rem;
+  margin-top: 0.7rem;
+  height: 2rem;
+  border-radius: 0.5rem;
+  background-color: #ee6fcb;
+  color: white;
+}
+
+
+/* coding for section 2 */
+#section2 {
+  width: 60%;
+  height: 75vh;
+  background-color: #ee6fcb;
+  
+}
+
+
+
+.txt {
+  height: 2rem;
+  width: 25rem;
+  margin-left: 3rem;
+  margin-top: 0.7rem;
+  border-radius: 0.5rem;
+  text-align: center;
+}
+.btn2{
+  
+  width: 3rem;
+  height: 1.8rem;
+  margin-left: 1rem;
+  border-radius: 1rem;
+  
+}
+.btn2 img{
+  width: 1rem;
+  margin-top: 3px;
+}
+
+
+
+
+footer{
+    padding-top: .5rem;
+    height:4.7vh;
+    background-color:pink;
     color: black;
-    font-weight: bolder;
-    font-size: 1.5rem;
-
-}
-main{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.container{
-    width: 70%;
-    height:75vh;
-    border-radius: 5rem;
-    display: flex;
-
-}
-#section1{
-    width: 40%;
-    height: 75vh;
-    background-color: #d377d5;
+    text-align: center;
+    font-weight: bold;
 }
 
-#section2{
-    width: 60%;
-    height: 75vh;
-    background-color:#ee6fcb;
-}
-#section1 img{
-    width: 50%;
-    height: 35vh;
-    margin: 3rem 5rem 0 5rem;
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* code for responsiveness */
+@media  screen and (max-width:800px) {
+
+.container {
+  margin: 2rem 0 2rem 0;
+  width: 80vw;
+  height: 75vh;
+  flex-wrap: wrap;
 }
-#section1 h2{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
-    margin-left: 2rem;
+#section1 {
+  width: 100%;
+  height: 50vh;
+  background-color: #d377d5;
+  margin-bottom: 1rem;
+}
+#section2 {
+  width: 100%;
+  height: 50vh;
+  background-color: #ee6fcb;
+  margin-bottom: 1rem;
+}
+
+
+#section1 img {
+  width: 80vw;
+  height: 25vh;
+  margin: 3rem 5rem 0 0rem;
+}
+#section1 h2 {
+  margin-left: 7rem;
 }
 #text{
-    height: 2rem;
-    width: 15rem;
-    margin-left: 2rem;
-    margin-top: .5rem;
-    border-radius: .5rem;
-    text-align: center ;
-
+  margin-left: 3.5rem;
 }
 #btn{
-    width: 8rem;
-    margin-left: 3rem;
-    margin-top: .5rem;
-    height: 2rem;
-    border-radius: .5rem;
-    background-color: #ee6fcb;
-    color: white;
+  margin-left: 7rem;
 }
 
-
-
-
-
+.navbar ul li a{
+  display: none;
+}  
+.navbar ul img{
+  display: block;
+}
+  
+}
