--- a/style.css
+++ b/style.css
@@ -39,18 +39,20 @@ main {
   height: 75vh;
   display: flex;
 }
-#section1 {
+
+
+#card1 {
   width: 40%;
   height: 75vh;
   background-color: #d377d5;
 }
 
-#section1 img {
+#card1 img {
   width: 30vw;
   height: 35vh;
   margin: 3rem 1rem 0 0;
 }
-#section1 h2 {
+#card1 h2 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: white;
   margin-left: 3rem;
@@ -74,17 +76,16 @@ main {
 }
 
 
-/* coding for section 2 */
-#section2 {
+/* coding for card 2 */
+#card2 {
   width: 60%;
   height: 75vh;
-  background-color: #ee6fcb;
-  
+  background-color: #ee6fcb;  
 }
 
 
-
-.txt {
+.txt{
+  visibility: hidden;
   height: 2rem;
   width: 25rem;
   margin-left: 3rem;
@@ -92,11 +93,14 @@ main {
   border-radius: 0.5rem;
   text-align: center;
 }
+
 .btn2{
-  
+  visibility: hidden;
+
   width: 3rem;
   height: 1.8rem;
-  margin-left: 1rem;
+  margin-left: .8rem;
+  margin-top: .8rem;
   border-radius: 1rem;
   
 }
@@ -144,13 +148,13 @@ footer{
   height: 75vh;
   flex-wrap: wrap;
 }
-#section1 {
+#card1 {
   width: 100%;
   height: 50vh;
   background-color: #d377d5;
   margin-bottom: 1rem;
 }
-#section2 {
+#card2 {
   width: 100%;
   height: 50vh;
   background-color: #ee6fcb;
@@ -158,12 +162,12 @@ footer{
 }
 
 
-#section1 img {
+#card1 img {
   width: 80vw;
   height: 25vh;
   margin: 3rem 5rem 0 0rem;
 }
-#section1 h2 {
+#card1 h2 {
   margin-left: 7rem;
 }
 #text{
